tests/core/error/expression-logical-2.rq
SELECT (false || 'a' AS ?op) { }
